my next target and my inspiration section are complete

--- a/index.html
+++ b/index.html
@@ -85,6 +85,83 @@
 
     </section>
     <!-- end why development section -->
+
+    <!--start my inspiration section -->
+    <section class="container my_inspiration">
+        <div class="inspiration" style="margin-bottom: 2em;">
+            <h2>My Inspiration</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's standard dummy text.</p>
+        </div>
+        <div class="inspiration_video">
+            <!-- <video width="320" height="240" autoplay muted>
+                <source src="https://youtu.be/Cxf5sOXG0w0?si=5tlw9bzDWhRe-O5l" type="video/mp4">
+                <source src="https://youtu.be/Cxf5sOXG0w0?si=5tlw9bzDWhRe-O5l" type="video/ogg">
+            </video> -->
+
+            <iframe class="video" width="560" height="315"
+                src="https://www.youtube.com/embed/Cxf5sOXG0w0?si=5tlw9bzDWhRe-O5l" title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+
+            <iframe class="video" width="560" height="315"
+                src="https://www.youtube.com/embed/nrpy3fOU0es?si=Fjt1qaoCcCkQKOVV" title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
+    <!--end my inspiration section -->
+
+    <!-- start my current target section -->
+    <section class="container my_current_terget">
+        <div class="current_terget_text">
+            <h2>My Current Target</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's standard dummy text.</p>
+        </div>
+        <div class="current_target_items">
+            <div class="current_target_item">
+                <div class="item_img">
+                    <img src="/assets/html.png" alt="">
+                </div>
+                <div class="item_text">
+                    <h2>HTML</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing.</p>
+                    <a class="html_documentation" target="_blank"
+                        href="https://developer.mozilla.org/en-US/docs/Web/HTML">Learn more</a>
+                </div>
+            </div>
+            <!-- item2 -->
+            <div class="current_target_item item_2">
+                <div class="item_img">
+                    <img src="/assets/css.png" alt="">
+                </div>
+                <div class="item_text">
+                    <h2>CSS</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing.</p>
+                    <a class="html_documentation" target="_blank"
+                        href="https://developer.mozilla.org/en-US/docs/Web/HTML">Learn more</a>
+                </div>
+            </div>
+
+            <!-- item3 -->
+            <div class="current_target_item item_3">
+                <div class="item_img">
+                    <img src="/assets/js.png" alt="">
+                </div>
+                <div class="item_text">
+                    <h2>JS</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing.</p>
+                    <a class="html_documentation" target="_blank"
+                        href="https://developer.mozilla.org/en-US/docs/Web/HTML">Learn more</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end my current target section -->
 </body>
 
 </html>
