--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section id="banner">
         <div class="container banner_item">
             <div>
-                <img src="/assets/Group.png" alt="">
+                <img src="./assets/Group.png" alt="">
             </div>
             <h1>"In the near future, I hope to become a Developer."</h1>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
@@ -43,7 +43,7 @@
                         More</a>
                 </div>
                 <div class="web_dev_img">
-                    <img src="/assets/Layer_1.png" alt="">
+                    <img src="./assets/Layer_1.png" alt="">
                 </div>
             </div>
 
@@ -60,7 +60,7 @@
                         More</a>
                 </div>
                 <div class="web_dev_img">
-                    <img src="/assets/Group 3.png" alt="">
+                    <img src="./assets/Group 3.png" alt="">
                 </div>
             </div>
 
@@ -78,7 +78,7 @@
                         More</a>
                 </div>
                 <div class="web_dev_img">
-                    <img src="/assets/Group 4.png" alt="">
+                    <img src="./assets/Group 4.png" alt="">
                 </div>
             </div>
         </div>
@@ -94,11 +94,6 @@
                 industry's standard dummy text.</p>
         </div>
         <div class="inspiration_video">
-            <!-- <video width="320" height="240" autoplay muted>
-                <source src="https://youtu.be/Cxf5sOXG0w0?si=5tlw9bzDWhRe-O5l" type="video/mp4">
-                <source src="https://youtu.be/Cxf5sOXG0w0?si=5tlw9bzDWhRe-O5l" type="video/ogg">
-            </video> -->
-
             <iframe class="video" width="560" height="315"
                 src="https://www.youtube.com/embed/Cxf5sOXG0w0?si=5tlw9bzDWhRe-O5l" title="YouTube video player"
                 frameborder="0"
@@ -125,7 +120,7 @@
         <div class="current_target_items">
             <div class="current_target_item">
                 <div class="item_img">
-                    <img src="/assets/html.png" alt="">
+                    <img src="./assets/html.png" alt="">
                 </div>
                 <div class="item_text">
                     <h2>HTML</h2>
@@ -137,7 +132,7 @@
             <!-- item2 -->
             <div class="current_target_item item_2">
                 <div class="item_img">
-                    <img src="/assets/css.png" alt="">
+                    <img src="./assets/css.png" alt="">
                 </div>
                 <div class="item_text">
                     <h2>CSS</h2>
@@ -150,7 +145,7 @@
             <!-- item3 -->
             <div class="current_target_item item_3">
                 <div class="item_img">
-                    <img src="/assets/js.png" alt="">
+                    <img src="./assets/js.png" alt="">
                 </div>
                 <div class="item_text">
                     <h2>JS</h2>
