--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header>
 
     </header>
+    <!-- start banner part -->
 
     <section id="banner">
         <div class="container banner_item">
@@ -24,6 +25,7 @@
             <button>contact with me</button>
         </div>
     </section>
+    <!-- end banner part -->
 
     <!-- start why development section -->
     <section class="container why_web_dev">
@@ -157,6 +159,45 @@
         </div>
     </section>
     <!-- end my current target section -->
+
+    <!-- start i need support section -->
+    <section id="support_sesions" class="container">
+        <div class="support_items">
+            <h2>I need Support</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <div class="field">
+                <input class="input_text" type="text" name="" id="" placeholder="suggest me any feedback for me">
+                <input class="submit_btn" type="submit" value="submit">
+            </div>
+        </div>
+    </section>
+    <!-- end i need support section -->
 </body>
+
+<!-- start footer -->
+<footer>
+    <div class="container footer_items">
+        <div class="footer_text">
+            <p>An Open Commitment by Abdus sobhan</p>
+        </div>
+        <div class="footer_icon">
+            <a href="https://www.facebook.com/" target="_blank">
+                <img src="./assets/facebook.png" alt="">
+            </a>
+            <a href="https://docs.github.com/en" target="_blank">
+                <img src="./assets/github.png" alt="">
+            </a>
+            <a href="https://www.linkedin.com/" target="_blank">
+                <img src="./assets/linkedin-icon 1.png" alt="">
+            </a>
+        </div>
+
+    </div>
+    <div class="copyright">
+        <small>&copy; 2025. Md. Abdus Sobhan . All Rights Reserved</small>
+    </div>
+
+</footer>
+<!-- end footer -->
 
 </html>
